# tab-rs

./: CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md  SECURITY.md
common/tab-api/: Cargo.toml
common/tab-api/src/: chunk.rs  client.rs  config.rs  config_global.rs  config_global2.rs  env.rs  launch.rs  lib.rs  log.rs  pty.rs  request.rs  response.rs  tab.rs
common/tab-service/: Cargo.toml
common/tab-service/src/: bus.rs  channels.rs  dyn_bus.rs  lib.rs  request.rs  serialized_request.rs  spawn.rs  storage.rs  tokio.rs  type_name.rs
common/tab-service/src/bus/: impl_tuple.rs
common/tab-service/src/channels/: futures.rs  historical.rs  subscription.rs  tokio.rs
common/tab-websocket/: Cargo.toml
common/tab-websocket/src/: auth.rs  bus.rs  client.rs  common.rs  lib.rs  message.rs  server.rs  service.rs
common/tab-websocket/src/bus/: connection.rs  connection_carrier.rs  listener.rs
common/tab-websocket/src/message/: connection.rs  listener.rs
common/tab-websocket/src/resource/: connection.rs  listener.rs
common/tab-websocket/src/service/: connection.rs  listener.rs
tab/: Cargo.toml  build.rs
tab-cli/: Cargo.toml  build.rs
tab-cli/src/: bus.rs  lib.rs  main.rs  message.rs  prelude.rs  service.rs  services.rs  state.rs  tab_driver.rs  write.rs
tab-cli/src/bus/: client.rs  main.rs  tab.rs  terminal.rs
tab-cli/src/completions/elvish/: tab.elv
tab-cli/src/completions/fish/: tab.fish
tab-cli/src/completions/zsh/: _tab
tab-cli/src/message/: client.rs  main.rs  tabs.rs  terminal.rs
tab-cli/src/service/: client.rs  create_tab.rs  main.rs  tab_state.rs  tabs.rs  terminal.rs  terminal_event.rs  workspace.rs
tab-cli/src/service/terminal/: crossterm_mode.rs  echo_mode.rs  terminal_event.rs
tab-cli/src/services/: client.rs  main.rs  state.rs  tab_state.rs  terminal.rs  terminal_event.rs
tab-cli/src/state/: tab.rs  terminal.rs  workspace.rs
tab-cli/tests/: reconnect.rs  session.rs  switch.rs
tab-cli/tests/common/: mod.rs
tab-cli/tests/snapshots/: reconnect__after.snap  reconnect__before.snap  session__result.snap  switch__create_a.snap
tab-command/: Cargo.toml
tab-command/src/: bus.rs  config.rs  env.rs  lib.rs  message.rs  prelude.rs  service.rs  state.rs  utils.rs
tab-command/src/bus/: fuzzy.rs  main.rs  tab.rs  terminal.rs
tab-command/src/message/: fuzzy.rs  main.rs  tabs.rs  terminal.rs
tab-command/src/service/: create_tab.rs  fuzzy.rs  main.rs  tab.rs  tab_state.rs  tab_title.rs  tabs.rs  terminal.rs  workspace.rs
tab-command/src/service/main/: autocomplete_close_tab.rs  autocomplete_tab.rs  check_workspace.rs  close_tabs.rs  disconnect_tabs.rs  global_shutdown.rs  list_tabs.rs  select_interactive.rs  select_previous.rs  select_tab.rs
tab-command/src/service/tab/: active_tabs.rs  create_tab.rs  select_tab.rs  tab_state.rs  workspace.rs
tab-command/src/service/terminal/: crossterm_mode.rs  echo_input.rs  echo_mode.rs  fuzzy.rs  terminal_event.rs
tab-command/src/state/: fuzzy.rs  tab.rs  tabs.rs  terminal.rs  workspace.rs  workspace_err.rs
tab-command/test_resources/dir/: tab.yml
tab-command/test_resources/dir/project/: tab.yml
tab-command/test_resources/doc/: tab.yml
tab-command/test_resources/doc/project/: tab.yml
tab-command/test_resources/env/: tab.yml
tab-command/test_resources/env/project/: tab.yml
tab-command/test_resources/ignore_dir/: tab.yml
tab-command/test_resources/ignore_dir/repo/: tab.yml
tab-command/test_resources/shell/: tab.yml
tab-command/test_resources/shell/project/: tab.yml
tab-command/test_resources/simple/: tab.yml
tab-command/test_resources/simple/project/: tab.yml
tab-command/test_resources/workspace-link/a/: tab.yml
tab-command/test_resources/workspace-link/b/: tab.yml
tab-command/test_resources/workspace-tab/: tab.yml
tab-daemon/: Cargo.toml
tab-daemon/src/: auth.rs  bus.rs  channels.rs  daemonfile.rs  endpoint.rs  lib.rs  main.rs  message.rs  prelude.rs  pty_process.rs  runtime.rs  service.rs  session.rs  state.rs
tab-daemon/src/bus/: cli.rs  connection.rs  daemon.rs  listener.rs  pty.rs  tab.rs
tab-daemon/src/channels/: scrollback.rs
tab-daemon/src/endpoint/: create.rs  stdin.rs  subscribe.rs
tab-daemon/src/message/: cli.rs  connection.rs  daemon.rs  listener.rs  pty.rs  tab.rs  tab_assignment.rs  tab_manager.rs
tab-daemon/src/service/: cli.rs  connection.rs  daemon.rs  pty.rs
tab-daemon/src/service/cli/: subscription.rs
tab-daemon/src/service/daemon/: listener.rs  retask.rs  tab.rs  tab_assignment.rs  tab_manager.rs  tabs.rs
tab-daemon/src/service/pty/: scrollback.rs
tab-daemon/src/state/: assignment.rs  connection.rs  pty.rs  tab.rs
tab-daemon/src/state/connection/: subscriptions.rs
tab-pty/: Cargo.toml
tab-pty-process/: Cargo.toml  README.md
tab-pty-process/src/: lib.rs  split.rs  unix.rs
tab-pty-process/src/unix/: child.rs  internal.rs  pty_file.rs
tab-pty/src/: bus.rs  lib.rs  main.rs  prelude.rs  pty_process.rs  service.rs
tab-pty/src/bus/: main.rs  pty.rs  tab.rs
tab-pty/src/message/: pty.rs
tab-pty/src/service/: client.rs  main.rs  pty.rs  tab.rs
tab-pty/src/service/pty/: process.rs  receiver.rs  sender.rs
tab/src/: about.txt  cli.rs  install.rs  main.rs
tab/src/completions/bash/: statusline.bash  tab.bash
tab/src/completions/fish/: statusline.fish  tab.fish
tab/src/completions/powershell/: _tab.ps1
tab/src/completions/zsh/: _tab  history.zsh  statusline.zsh  (+1 more)
tab/src/help/: about.txt  after-help.txt
tab/src/install/: bash.rs  fish.rs  starship.rs  zsh.rs
tab/tests/: keyboard_latency.rs  reconnect.rs  remote_close.rs  remote_disconnect.rs  retask.rs  session.rs  simple.rs  switch.rs
tab/tests/common/: mod.rs
tab/tests/snapshots/: reconnect__after.snap  remote_close__env.snap  remote_close__remote_close_env.snap  remote_close__remote_close_name.snap  remote_disconnect__env.snap  remote_disconnect__name.snap  session__result.snap  simple__after.snap  switch__after.snap  switch__create_b.snap  switch__create_from.snap  switch__create_target.snap  switch__into_target.snap
(+35 files in other folders)
