[package]
name = "tab-cli"
version = "0.1.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tab"
path = "src/main.rs"

[dependencies]
tab-api = { path = "../common/tab-api" }
tab-websocket = { path = "../common/tab-websocket" }
tab-daemon = { path = "../tab-daemon" }
tab-pty = { path = "../tab-pty" }
lifeline = { git = "https://github.com/austinjones/lifeline-rs.git" }

clap = "2.33.2"

# async / websockets
tungstenite = "0.11"
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "0.2", features = ["time", "io-std", "io-util", "process", "blocking", "macros", "rt-threaded"] }
futures = "0.3"

bincode = "1.3"

# logging
log = "0.4"
simplelog = "0.8"

# error management
anyhow = "1.0"
thiserror = "1.0"

crossterm = "0.17"

[dev-dependencies]
tokio-test = "0.2.1"