[package]
name = "tab-cli"
version = "0.2.0"
description = "a modern terminal multiplexer designed for overwhelmed software & systems engineers"
keywords = ["cli", "terminal", "tool"]
categories = ["command-line-utilities"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
readme = "../README.md"

[[bin]]
name = "tab"
path = "src/main.rs"

[dependencies]
tab-api = { path = "../common/tab-api" }
tab-command = { path = "../tab-command" }
tab-daemon = { path = "../tab-daemon" }
tab-pty = { path = "../tab-pty" }
clap = "2.33.2"
anyhow = "1.0"

[build-dependencies]
clap = "2.33"
