[package]
name = "tab-cli"
version = "0.2.0"
description = "a modern terminal multiplexer designed for overwhelmed software & systems engineers"
keywords = ["cli", "terminal", "tool"]
categories = ["command-line-utilities"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
readme = "../README.md"

[[bin]]
name = "tab"
path = "src/main.rs"

[dependencies]
tab-api = { path = "../common/tab-api" }
tab-command = { path = "../tab-command" }
tab-daemon = { path = "../tab-daemon" }
tab-pty = { path = "../tab-pty" }
clap = "2.33.2"
anyhow = "1.0"

[dev-dependencies]
lifeline = { git = "https://github.com/austinjones/lifeline-rs.git" }
tokio-test = "0.2.1"
tokio = { version = "", features = ["process", "time", "rt-threaded"] } 
insta = "0.16"
assert_cmd = "1.0"
tempfile = "3.1"

[build-dependencies]
clap = "2.33"
