[package]
name = "tab-command"
version = "0.2.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the cli command module for the tab terminal multiplexer"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = { version = "0.2.0", path = "../common/tab-api" }
tab-websocket = { version = "0.2.0", path = "../common/tab-websocket" }
lifeline = "0.2.1"

clap = "2.33.2"

# async / websockets
tungstenite = "0.11"
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "0.2", features = ["time", "fs", "io-std", "io-util", "process", "blocking", "macros", "rt-threaded"] }
futures = "0.3"

bincode = "1.3"

# logging
log = "0.4"
simplelog = "0.8"

# error management
anyhow = "1.0"
thiserror = "1.0"

crossterm = "0.17"

# config
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

[dev-dependencies]
tokio-test = "0.2.1"