[package]
name = "tab-command"
version = "0.3.2"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the cli command module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = "0.3.2"
tab-websocket = "0.3.0"
lifeline = "0.3"

clap = "2.33.2"
crossterm = "0.17"

# async / websockets
tokio = { version = "0.2", features = ["time", "fs", "io-std", "io-util", "process", "blocking", "macros", "rt-threaded"] }

# logging
log = "0.4"
simplelog = "0.8"

# error management
anyhow = "1.0"
thiserror = "1.0"

# config
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

[dev-dependencies]
tokio-test = "0.2.1"