[package]
name = "tab-command"
version = "0.5.4"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the cli command module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = "0.5.3"
tab-websocket = "0.5.0"
lifeline = "0.4.0"

clap = "2.33.2"
crossterm = { version = "0.19", features = ["event-stream"] }

# async / websockets
tokio = { version = "0.2", features = ["time", "fs", "io-std", "io-util", "process", "blocking", "macros", "rt-threaded"] }

# logging
log = "0.4"
simplelog = "0.9"

# error management / utils
anyhow = "1.0"
thiserror = "1.0"
semver = "0.11"
typed-builder = "0.8"

# workspaces
dirs = "3.0"

# fuzzy
fuzzy-matcher = "0.3"

# config
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

[dev-dependencies]
tokio-test = "0.2"
maplit = "1.0"
pretty_assertions = "0.6"