[package]
name = "tab-daemon"
version = "0.2.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the daemon command module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = { version = "0.2.0", path = "../common/tab-api" }
tab-websocket = { version = "0.2.0", path = "../common/tab-websocket" }
lifeline = "0.2.1"

dirs = "3.0"
serde_yaml = "0.8"
bincode = "1.3"

# async / websockets
tungstenite = "0.11"
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time", "io-util", "rt-threaded"] }
tokio-io = "0.1"
tab-pty-process = { path = "../tab-pty-process"}
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# authentication / tokens
rand = "0.7"
base64 = "0.12"

# logging
log = "0.4"
simplelog = "0.8"

# error management
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.2.1"
http = "0.2"