[package]
name = "tab-daemon"
version = "0.5.4"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the daemon module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = "0.5.3"
tab-websocket = "0.5.0"
lifeline = "0.4.0"

dirs = "3.0"
serde_yaml = "0.8"

# async / websockets
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time", "io-util", "rt-threaded"] }
tokio-io = "0.1"
async-trait = "0.1"

# authentication / tokens
rand = "0.7"
base64 = "0.13"

# logging
log = "0.4"
simplelog = "0.8"
log-panics = "2.0"

# error management
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.2.1"
http = "0.2"

tungstenite = { version = "0.11", default-features = false }
async-tungstenite = { version = "0.8", features = ["tokio-runtime"] }