# Forked from https://github.com/pkgw/stund/
# Copyright 2019 Peter Williams <peter@newton.cx>
# Licensed under the MIT License.

[package]
name = "tab-pty-process"
version = "0.2.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the tab multiplexer fork of tokio-pty-process.  Interact with a child process through a pseudo-TTY, asynchronously using Tokio"
readme = "README.md"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2"
tokio = { version = "1.0", features = ["io-util", "signal"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
errno = "0.2"
