[package]
name = "tab-pty"
version = "0.3.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the pty module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tab-api = "0.3.0"
tab-websocket = "0.3.0"
lifeline = "0.3"

dirs = "3.0"
serde_yaml = "0.8"
bincode = "1.3"

# async / websockets
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time", "io-util", "rt-threaded"] }
tokio-io = "0.1"
tab-pty-process = { version = "0.2", path = "../tab-pty-process"}
futures = "0.3"

async-trait = "0.1"

# authentication / tokens
rand = "0.7"
base64 = "0.12"

# logging
log = "0.4"
simplelog = "0.8"

# error management
anyhow = "1.0"
thiserror = "1.0"