[package]
name = "tab"
version = "0.3.1"
description = "a modern terminal multiplexer designed for software & systems engineers"
keywords = ["cli", "terminal", "tool"]
categories = ["command-line-utilities"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
readme = "../README.md"

[[bin]]
name = "tab"
path = "src/main.rs"

[dependencies]
tab-api = "0.3.0"
tab-command = "0.3.0"
tab-daemon = "0.3.0"
tab-pty = "0.3.0"
clap = "2.33.2"
anyhow = "1.0"

# used for install command
toml_edit = "0.2.0"
dirs = "3.0"
which = "4.0"

[dev-dependencies]
lifeline = "0.3"
strip-ansi-escapes = "0.1.0"
tokio-test = "0.2.1"
tokio = { version = "0.2", features = ["process", "time", "rt-threaded"] } 
insta = "0.16"
assert_cmd = "1.0"
tempfile = "3.1"
log = "0.4"
simplelog = "0.8"

[build-dependencies]
clap = "2.33"
