[package]
name = "tab"
version = "0.5.6"
description = "The intuitive, config-driven terminal multiplexer"
keywords = ["cli", "terminal", "tool"]
categories = ["command-line-utilities"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
readme = "../README.md"
exclude = [
    "tests/snapshots/*"
]

[[bin]]
name = "tab"
path = "src/main.rs"


[dependencies]
tab-api = "0.5.6"
tab-command = "0.5.6"
tab-daemon =  "0.5.4"
tab-pty = "0.5.3"

clap = "2.33.3"
anyhow = "1.0"
log = "0.4"

# used for install command
tempfile = "3.2"
dialoguer = "0.9"
toml_edit = "0.6"
dirs = "4.0"
which = "4.2"

[dev-dependencies]
lifeline = "0.6"
postage = "0.4"
strip-ansi-escapes = "0.1.1"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["process", "time", "rt-multi-thread"] } 
insta = "1.8"
assert_cmd = "2.0"
log = "0.4"
simplelog = "0.10"
snailquote = "0.3"

[build-dependencies]
clap = "2.33"
