[package]
name = "tab-api"
version = "0.2.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifeline = "0.2.1"
tokio = { version = "0.2", features = ["process"] }
sysinfo = "0.15"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

# logging
log = "0.4"

# error management
anyhow = "1.0"
thiserror = "1.0"