[package]
name = "tab-api"
version = "0.5.6"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the common api module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifeline = "0.6"
postage = "0.3"
tokio = { version = "1.0", features = ["macros", "process", "time"] }
sysinfo = { version = "0.15", default-features = false }
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
snailquote = "0.3"

nix = "0.19"

# logging
log = "0.4"

# error management
anyhow = "1.0"
thiserror = "1.0"