[package]
name = "tab-service"
version = "0.1.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "0.4.23"
futures = "0.3"
tokio = { version = "0.2", features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
lru = { version = "0.6.0", optional = true }

[features]
default = ["serialize"]
serialize = ["uuid", "serde", "lru"]
# [features]
# default = ["tokio-executor"]
# tokio-executor = ["tokio"]