[package]
name = "tab-websocket"
version = "0.2.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the websocket utility module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifeline = "0.2.1"

tungstenite = "0.11"
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "0.2", features = ["macros", "sync", "stream"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
serde = "1.0"
log = "0.4"

async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.2.1"