[package]
name = "tab-websocket"
version = "0.3.0"
authors = ["Austin Jones <implAustin@gmail.com>"]
description = "the websocket utility module for the tab terminal multiplexer"
homepage = "https://github.com/austinjones/tab-rs"
repository = "https://github.com/austinjones/tab-rs"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifeline = "0.3"

tungstenite = { version = "0.11", default-features = false }
async-tungstenite = { version = "0.8", features = ["tokio-runtime"] }
tokio = { version = "0.2", features = ["macros", "sync", "stream", "signal"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
serde = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.2.1"